# db-factfinder

./: .gitignore  README.md  pyproject.toml  requirements.in  requirements.txt  setup.py  test.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: acs.yml  acs_2020_manual_update.yml  acs_manual_update.yml  docs.yml
bash/: dev_python_packages.sh
docs/factfinder/: aggregated_geography.html  index.html  main.html  median.html  special.html  utils.html  variable.html
factfinder/: __init__.py  aggregate_geography.py  aggregated_geography.py  calculate.py  calculate_median.py  database.py  download.py  main.py  median.py  median_moe.py  metadata.py  multi.py  special.py  updates.py  utils.py  variable.py
factfinder/data/: metadata.json  special.json
factfinder/data/2010/: decennial.json
factfinder/data/2018/: acs.json
factfinder/data/acs/2010/: median.json  metadata.json
factfinder/geography/: 2010.py  2010_to_2020.py  __init__.py
notebooks/: median.ipynb  regular.ipynb  special.ipynb
pipelines/: __init__.py  acs.py  acs16_20.py  acs_2020_manual_update.py  acs_community_profiles.py  acs_manual_update.py  convert_metadata.js  create_acs.sql
pipelines/acs/: README.md  build.py  config.sh  convert_acs.py  create.sql  demographic.py  pff_download.py  runner.sh
pipelines/community_profiles/: notebook.ipynb  out_acs.py  out_floodplain_demo.py  out_parks.py
pipelines/community_profiles/output/: acs_output.csv  fp_output.csv  parks_output.csv
tests/: test_calculate.py  test_conversion.py  test_download.py  test_geography.py  test_metadata.py
(+9 files in other folders)
